Changes in mirt 0.7.5

NEW FEATURES

- for consistency with other current IRT software (rather than TESTFACT and POLYFACT), the scaling 
  constant has been set to D = 1

- nominal.highlow option added to specify which categories are the highest and lowest in nominal models.
  Often provide better numerical stability when utilized

- increase number of draws in the Monte Carlo calculation of the log-likelihood from 3000 to 5000

- when itemtype all equal 'Rasch', '1PL', 'rsm', or 'grsm' in unidimensional models the latent 
  variance parameter is automatically freed and is estimated

- mixedmirt() more supportive of user defined input formulas, and now includes an internal 'items'
  argument to create the item design matrix used to estimate the intercepts. More closely mirrors 
  the outputed results from lme4 for Rasch models as well

- drop.zeros option added to extract.item and itemplot to reduce dimensionality of factor structures
  that contain slopes equal to zero

- EM tolerance (TOL argument) default dropped to .0001 (originally .001)

- type = 'score' and type = 'infoSE' added to plot() generic for expected total score and joint test
  standard error/information 

- custom latent mean and covariance matrix can be passed to fscores() for EAP, MAP, and EAPsum methods.
  Also applies to personfit() and itemfit() diagnostics 

- scores.only option to fscores() for returning just the estimated factor scores 

- bfactor can include NA values in the model to omit the estimation of specific factors for the 
  corresponding item

BUG FIXES

- limiting values in z.outfit and z.infit statistics for small sample sizes (fix suggested by Mike Linacre)

- missing data gradient bug fix in MH-RM for dichotomous item models

- global df fix for multidimensional confirmatory models 

- SEM information matrix computed with more accuracy (M-step was not identical to original EM), 
  and fixed when equality constrains are imposed


Changes in mirt 0.7.0

NEW FEATURES
